--- a/app_data.json
+++ b/app_data.json
@@ -457,7 +457,62 @@
       },
       {
         "name": "６　　100をこえる数",
-        "apps": []
+        "apps": [
+          {
+            "id": "75_100wo_koeru_kazu",
+            "title": "すうじでかきましょう（１）",
+            "path": "2nen/06_100_koeru/75_sujide_kakimasyo1.html",
+            "page": "75"
+          },
+          {
+            "id": "75_100wo_koeru_kazu2",
+            "title": "すうじでかきましょう（２）",
+            "path": "2nen/06_100_koeru/76_sujide_kakimasyo2.html",
+            "page": "76"
+          },
+          {
+            "id": "83_tashizan_hikizan_100",
+            "title": "たし算と ひき算（100のまとまり）",
+            "path": "2nen/06_100_koeru/83_tashizan_hikizan_100.html",
+            "page": "83"
+          },
+          {
+            "id": "82_tashizan_hikizan",
+            "title": "たし算と ひき算（10のまとまり）",
+            "path": "2nen/06_100_koeru/82_tashizan_hikizan.html",
+            "page": "82"
+          },
+          {
+            "id": "79_kazu_no_narabi_keyboard",
+            "title": "数のならび（数直線）",
+            "path": "2nen/06_100_koeru/79_kazu_no_narabi.html",
+            "page": "79"
+          },
+          {
+            "id": "80_kazu_no_daisho",
+            "title": "数の大小（どちらが大きい？）",
+            "path": "2nen/06_100_koeru/80_kazu_no_daisho.html",
+            "page": "80"
+          },
+          {
+            "id": "75_kazu_no_yomikata_v2",
+            "title": "数を読みましょう（１）",
+            "path": "2nen/06_100_koeru/75_kazu_no_yomikata.html",
+            "page": "75"
+          },
+          {
+            "id": "76_kazu_no_yomikata_zeros",
+            "title": "数を読みましょう（２）",
+            "path": "2nen/06_100_koeru/76_kazu_no_yomikata_zeros.html",
+            "page": "76"
+          },
+          {
+            "id": "84_futogo_shiki_v3",
+            "title": "＞、＜、＝ を つかった しき",
+            "path": "2nen/06_100_koeru/84_futogo_shiki.html",
+            "page": "84"
+          }
+        ]
       },
       {
         "name": "７　　かさ",
@@ -486,16 +541,6 @@
       {
         "name": "１０　かけ算⑴",
         "apps": [
-          {
-            "id": "50kuku_3dan_junban",
-            "title": "三の段の九九（じゅんばん）",
-            "path": "2nen/10_kakezan1/50kuku_3dan_junban.html"
-          },
-          {
-            "id": "60kuku_3dan_barabara",
-            "title": "三の段の九九（ばらばら）",
-            "path": "2nen/10_kakezan1/60kuku_3dan_barabara.html"
-          },
           {
             "id": "2_no_dan_card_junban",
             "title": "九九カード（２のだん・じゅんばん）",
@@ -543,92 +588,12 @@
             "title": "九九カード（５のだん・ばらばら）",
             "path": "2nen/10_kakezan1/14_5_no_dan_card_random.html",
             "page": "14"
-          },
-          {
-            "id": "90kuku_5234dan_random",
-            "title": "二、三、四、五の段の九九",
-            "path": "2nen/10_kakezan1/90kuku_5234dan_random.html"
-          },
-          {
-            "id": "30kuku_2dan_junban",
-            "title": "二の段の九九（じゅんばん）",
-            "path": "2nen/10_kakezan1/30kuku_2dan_junban.html"
-          },
-          {
-            "id": "40kuku_2dan_barabara",
-            "title": "二の段の九九（ばらばら）",
-            "path": "2nen/10_kakezan1/40kuku_2dan_barabara.html"
-          },
-          {
-            "id": "10kuku_5dan_junban",
-            "title": "五の段の九九（じゅんばん）",
-            "path": "2nen/10_kakezan1/10kuku_5dan_junban.html"
-          },
-          {
-            "id": "20kuku_5dan_barabara",
-            "title": "五の段の九九（ばらばら）",
-            "path": "2nen/10_kakezan1/20kuku_5dan_barabara.html"
-          },
-          {
-            "id": "70kuku_4dan_junban",
-            "title": "四の段の九九（じゅんばん）",
-            "path": "2nen/10_kakezan1/70kuku_4dan_junban.html"
-          },
-          {
-            "id": "80kuku_4dan_barabara",
-            "title": "四の段の九九（ばらばら）",
-            "path": "2nen/10_kakezan1/80kuku_4dan_barabara.html"
-          },
-          {
-            "id": "template",
-            "title": "（タイトル未設定）",
-            "path": "2nen/10_kakezan1/template.html"
           }
         ]
       },
       {
         "name": "１１　かけ算⑵",
         "apps": [
-          {
-            "id": "110kuku_16789dan_random",
-            "title": "一、六、七、八、九段の九九",
-            "path": "2nen/11_kakezan2/110kuku_16789dan_random.html"
-          },
-          {
-            "id": "90kuku_1dan_junban",
-            "title": "一の段の九九（じゅんばん）",
-            "path": "2nen/11_kakezan2/90kuku_1dan_junban.html"
-          },
-          {
-            "id": "100kuku_1dan_barabara",
-            "title": "一の段の九九（ばらばら）",
-            "path": "2nen/11_kakezan2/100kuku_1dan_barabara.html"
-          },
-          {
-            "id": "30kuku_7dan_junban",
-            "title": "七の段の九九（じゅんばん）",
-            "path": "2nen/11_kakezan2/30kuku_7dan_junban.html"
-          },
-          {
-            "id": "40kuku_7dan_barabara",
-            "title": "七の段の九九（ばらばら）",
-            "path": "2nen/11_kakezan2/40kuku_7dan_barabara.html"
-          },
-          {
-            "id": "70kuku_9dan_junban",
-            "title": "九の段の九九（じゅんばん）",
-            "path": "2nen/11_kakezan2/70kuku_9dan_junban.html"
-          },
-          {
-            "id": "80kuku_9dan_barabara",
-            "title": "九の段の九九（ばらばら）",
-            "path": "2nen/11_kakezan2/80kuku_9dan_barabara.html"
-          },
-          {
-            "id": "120kuku_10mondai",
-            "title": "九九",
-            "path": "2nen/11_kakezan2/120kuku_10mondai.html"
-          },
           {
             "id": "81_all_random",
             "title": "九九カード",
@@ -694,36 +659,6 @@
             "title": "九九カード（９のだん・ばらばら）",
             "path": "2nen/11_kakezan2/31_9_no_dan_card_random.html",
             "page": "31"
-          },
-          {
-            "id": "130kuku_81mondai",
-            "title": "九九（81問）",
-            "path": "2nen/11_kakezan2/130kuku_81mondai.html"
-          },
-          {
-            "id": "50kuku_8dan_junban",
-            "title": "八の段の九九（じゅんばん）",
-            "path": "2nen/11_kakezan2/50kuku_8dan_junban.html"
-          },
-          {
-            "id": "60kuku_8dan_barabara",
-            "title": "八の段の九九（ばらばら）",
-            "path": "2nen/11_kakezan2/60kuku_8dan_barabara.html"
-          },
-          {
-            "id": "10kuku_6dan_junban",
-            "title": "六の段の九九（じゅんばん）",
-            "path": "2nen/11_kakezan2/10kuku_6dan_junban.html"
-          },
-          {
-            "id": "20kuku_6dan_barabara",
-            "title": "六の段の九九（ばらばら）",
-            "path": "2nen/11_kakezan2/20kuku_6dan_barabara.html"
-          },
-          {
-            "id": "template",
-            "title": "（タイトル未設定）",
-            "path": "2nen/11_kakezan2/template.html"
           }
         ]
       },
@@ -1186,6 +1121,12 @@
       {
         "name": "１９　2けたをかけるかけ算の筆算",
         "apps": [
+          {
+            "id": "81_all_random",
+            "title": "九九カード",
+            "path": "3nen/19_kakezan_hissan2/34_81_all_random.html",
+            "page": "34"
+          },
           {
             "id": "math_2digit_times_tens_v3",
             "title": "何十をかける計算",
