--- a/app_data.json
+++ b/app_data.json
@@ -1224,7 +1224,8 @@
           {
             "id": "2keta_kakeru_2keta",
             "title": "筆算トレーニング",
-            "path": "3nen/19_kakezan_hissan2/87_2keta_kakeru_2keta.html"
+            "path": "3nen/19_kakezan_hissan2/87_2keta_kakeru_2keta.html",
+            "page": "87"
           }
         ]
       },
