--- a/app_data.json
+++ b/app_data.json
@@ -1127,39 +1127,10 @@
         "name": "１４　1けたをかけるかけ算の筆算",
         "apps": [
           {
-            "id": "25-4_2keta_kakeru_1keta_kuriagarinasi",
-            "title": "２けた×１けた くりあがりなし",
-            "path": "3nen/14_kakezan_hissan1/25-4_2keta_kakeru_1keta_kuriagarinasi.html"
-          },
-          {
-            "id": "26-6_ju_no_kuraiheno_kuriagari",
-            "title": "２けた×１けた くり上がり",
-            "path": "3nen/14_kakezan_hissan1/26-6_2keta_kakeru_1keta_kuriagari.html"
-          },
-          {
-            "id": "27-8_hyaku_no_kuraiheno_kuriagari",
-            "title": "２けた×１けた 百の位へのくり上がり",
-            "path": "3nen/14_kakezan_hissan1/27-8_hyaku_no_kuraiheno_kuriagari.html"
-          },
-          {
-            "id": "28-12,13_2kai_kuriagaru_hissan",
-            "title": "２回くり上がるひっ算",
-            "path": "3nen/14_kakezan_hissan1/28-12,13_2kai_kuriagaru_hissan.html"
-          },
-          {
-            "id": "31-5_3keta_kakeru_1keta_final",
-            "title": "３けた×１けたの筆算",
-            "path": "3nen/14_kakezan_hissan1/31-5_3keta_kakeru_1keta.html"
-          },
-          {
-            "id": "23-3,4_nanju_nanbyakuno_kakezan",
-            "title": "何十・何百のかけ算",
-            "path": "3nen/14_kakezan_hissan1/23-3,4_nanju_nanbyakuno_kakezan.html"
-          },
-          {
-            "id": "32-3_anzan",
-            "title": "暗算",
-            "path": "3nen/14_kakezan_hissan1/32-3_anzan.html"
+            "id": "2keta_kakeru_1keta_page25",
+            "title": "(2けた)×(1けた)の筆算",
+            "path": "3nen/14_kakezan_hissan1/25_2keta_kakeru_1keta_kuriagarinasi.html",
+            "page": "25"
           }
         ]
       },
